bug: overflow visible more appropriate
Also run yarn i18n

--- a/src/app/shared/components/drag-and-drop-tree/drag-and-drop-tree.component.scss
+++ b/src/app/shared/components/drag-and-drop-tree/drag-and-drop-tree.component.scss
@@ -10,7 +10,7 @@
 
   background: #fff;
   opacity: 0.3;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .drop-inside {
